examples/test/testpolicy3763.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3763
  namespace: namespace217
spec:
  podSelector:
    matchLabels:
      key24: value32
      key4: value43
      key16: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value10
          key40: value25
      podSelector:
        matchLabels:
          key27: value15
          key1: value14
